Add services stats RPC protos
