# api/external/applications/applications.swagger.json
@@ -211,6 +211,22 @@
         ]
       }
     },
+    "/beta/applications/stats": {
+      "get": {
+        "operationId": "GetServicesStats",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/applicationsServicesStatsRes"
+            }
+          }
+        },
+        "tags": [
+          "ApplicationsService"
+        ]
+      }
+    },
     "/beta/applications/version": {
       "get": {
         "operationId": "GetVersion",
@@ -384,6 +400,19 @@
           "items": {
             "$ref": "#/definitions/applicationsService"
           }
+        }
+      }
+    },
+    "applicationsServicesStatsRes": {
+      "type": "object",
+      "properties": {
+        "total_service_groups": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "total_services": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
